# outliner

./: .gitignore  AGENTS.md  Makefile  PLAN.md  README.md  data.py  main.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
frontend/: README.md
frontend/web/: eslint.config.js  package-lock.json  package.json  playwright.config.ts
frontend/web/src/: App.css  App.tsx  AppRoutes.tsx  main.tsx
frontend/web/src/api-client/: client.gen.ts  sdk.gen.ts  types.gen.ts
frontend/web/src/components/: Block.tsx  CreateDatabaseModal.tsx  ImportDatabaseModal.tsx  ManageDatabasesModal.tsx  Page.tsx  PageMenu.tsx  RightSidebar.tsx  TextBlock.tsx  WelcomeScreen.tsx  WorkspaceSidebar.tsx
frontend/web/src/components/block/: Block.tsx  TextBlock.tsx
frontend/web/src/components/common/: BaseBlock.tsx  CommandPalette.tsx  DatabaseSelector.tsx  LoadingOverlayWrapper.tsx  SearchPalette.tsx
frontend/web/src/components/database/: CreateDatabaseModal.tsx  ManageDatabasesModal.tsx
frontend/web/src/components/page/: AllPages.tsx  Page.tsx  PageActions.tsx  PageContent.tsx  PageHeader.tsx
frontend/web/src/components/search/: CommandPalette.tsx
frontend/web/src/contexts/: BlockEditingContext.tsx  DatabaseContext.tsx
frontend/web/src/hooks/: useBlockData.ts  useBlockOperations.ts  useDatabase.ts  useDatabaseManager.ts  useKeyboardShortcut.ts  usePageData.ts
frontend/web/src/services/: APIService.ts  index.ts
frontend/web/tests/: AppShell.spec.ts  LeftSidebar.spec.ts  LeftSidebarVisibility.spec.ts  WorkspaceSidebar.spec.ts  page.spec.ts  test-fixtures.ts
server/: README.md  pyproject.toml
server/src/: api.py  data.db  data.py  main.py
server/src/outliner_api_server/: __main__.py  api.py  constants.py  data.db  data.py  models.py  sysdb.py  userdb.py  utils.py
server/src/outliner_api_server/db/: base_db.py  errors.py  models.py  sysdb.py  userdb.py
server/src/outliner_api_server/routers/: blocks_router.py  databases_router.py  dependencies.py  import_router.py  models.py  pages_router.py  request_models.py  utils_router.py  workspaces_router.py
server/tests/component/: test_api.py  test_databases_router.py  test_search_api.py
server/tests/unit/: test_api.py  test_database.py  test_dependencies.py  test_fts_search.py  test_sysdb.py
src/: data.db  data.py  main.py
tests/unit/: test_database.py
(+7 files in other folders)
