[project]
name = "outliner-api-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "click==8.3.0",
    "fastapi==0.116.2",
    "h11==0.16.0",
    "idna==3.10",
    "pydantic==2.11.9",
    "pydantic-core==2.33.2",
    "sniffio==1.3.1",
    "starlette==0.48.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.1",
    "uvicorn==0.36.0",
]

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
]

[project.scripts]
start-api = "outliner_api_server.main:start_api"
